# wysiwyg-rs

./: CLAUDE.md  Cargo.toml  README.md  prek.toml
crates/wysiwyg-collab/: Cargo.toml
crates/wysiwyg-collab/examples/: two_peer_collab.rs  two_peer_incremental.rs
crates/wysiwyg-collab/src/: lib.rs
crates/wysiwyg-core/: Cargo.toml
crates/wysiwyg-core/examples/: basic_editing.rs  marks_and_headings.rs  undo_redo.rs
crates/wysiwyg-core/src/: lib.rs
crates/wysiwyg-core/src/commands/: blocks.rs  input.rs  marks.rs  mod.rs
crates/wysiwyg-core/src/model/: attrs.rs  mark.rs  mod.rs  node.rs  resolve.rs  schema.rs  slice.rs
crates/wysiwyg-core/src/state/: editor_state.rs  history.rs  mod.rs  selection.rs  transaction.rs
crates/wysiwyg-core/src/transform/: mark_step.rs  mod.rs  replace_step.rs  step.rs  step_map.rs  transform.rs
crates/wysiwyg-wasm/: Cargo.toml
crates/wysiwyg-wasm/src/: lib.rs
examples/web/: index.html  wysiwyg.html
