[workspace]
resolver = "2"
members = [
    "crates/wysiwyg-core",
    "crates/wysiwyg-collab",
    "crates/wysiwyg-wasm",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
unicode-segmentation = "1"
yrs = "0.21"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
proptest = "1"
