[package]
name = "wysiwyg-core"
version = "0.1.0"
edition = "2021"
description = "Platform-independent core for a WYSIWYG editor (document model, schema, transforms, state)"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[[example]]
name = "basic_editing"
path = "../../examples/basic_editing.rs"

[[example]]
name = "marks_and_headings"
path = "../../examples/marks_and_headings.rs"

[[example]]
name = "undo_redo"
path = "../../examples/undo_redo.rs"
