[package]
name = "wysiwyg-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Platform-independent WYSIWYG editor core — document model, schema, transforms, selection, state, undo/redo, commands"
license = "MIT"
authors = ["zztkm <zztkm@veltiosoft.com>"]
repository = "https://github.com/zztkm/wysiwyg-rs"
homepage = "https://github.com/zztkm/wysiwyg-rs"
readme = "../../README.md"
keywords = ["editor", "wysiwyg", "prosemirror", "document", "wasm"]
categories = ["text-editors", "data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
