[package]
name = "wysiwyg-wasm"
version = "0.1.0"
edition = "2021"
description = "Wasm bindings for wysiwyg-rs"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wysiwyg-core = { path = "../wysiwyg-core" }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
