[package]
name = "wysiwyg-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for wysiwyg-rs"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wysiwyg-core = { path = "../wysiwyg-core" }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
